--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>Hello!</h1>
+
+<!-- <a routerLink="/login">Temp Log Temp Log</a>
+<a routerLink="/signup">Temp Sign Temp Sign</a> -->
+<a routerLink="/auth">SHWITCH</a>
+
+<router-outlet></router-outlet>
