--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,8 @@
-<button>get clickin if you itchin for a switchin</button>
+<!-- <button>get clickin if you itchin for a switchin</button>
 <a routerLink="/signup">Sign Up</a>
-<a routerLink="/login">Login</a>
+<a routerLink="/login">Login</a> -->
+
+<div class='authPage'>
+    <app-login></app-login>
+    <app-signup></app-signup>
+</div>
