--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -7,7 +7,7 @@
                 <li><a routerLink='/'>Home</a></li>
                 <li><a routerLink='/about'>About</a></li>
                 <li><a routerLink='/artists'>Artists</a></li>
-                <button mat-button class='authButton'>Login/Signup</button>
+                <button mat-button routerLink='/auth' class='authButton'>Login/Signup</button>
 
             </ul>
         </nav>
