--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,8 +1,14 @@
 /* Bordered form */
-form {
-    border: 3px solid #f1f1f1;
+mat-form-field {
+    text-align: center;
+
   }
   
+  
+.loginForm {
+  /* margin-left: 5em; */
+  
+}
   /* Full-width inputs */
   input{
     width: 100%;
@@ -15,7 +21,7 @@ form {
   
   /* Set a style for all buttons */
   button {
-    background-color: #4CAF50;
+    background-color: #204a82;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
