--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,7 +1,9 @@
 /* Bordered form */
-form {
-    border: 3px solid #f1f1f1;
-  }
+mat-form-field {
+  text-align: center;
+
+}
+  
   
   /* Full-width inputs */
   input{
@@ -15,7 +17,7 @@ form {
   
   /* Set a style for all buttons */
   button {
-    background-color: #4CAF50;
+    background-color: #204a82;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
