--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,9 +4,9 @@
         <nav>
 
             <ul>
-                <li><a routerLink='/'>Home</a></li>
-                <li><a routerLink='/about'>About</a></li>
-                <li><a routerLink='/artists'>Artists</a></li>
+                <li><button mat-button routerLink='/' class='authButton'>Home</button></li>
+                <li><button mat-button routerLink='/about' class='authButton'>About</button></li>
+                <li><button mat-button routerLink='/artists' class='authButton'>Artists</button></li>
                 <button mat-button routerLink='/auth' class='authButton'>Login/Signup</button>
 
             </ul>
