--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -6,7 +6,7 @@
 </div>
     <br/>
 <div class="pics">
-    <img class="artFind">
+    <img class="artFind" routerLink="/get-artists">
     <!-- Make the same picture but cut in half -->
     <img class="artShare">
 </div>
