--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -1,6 +1,6 @@
 .authPage {
     background-color: #bda3a5;
-    /* opacity: .9; */
+    opacity: .9;
     height: 97.5%;
     justify-self: center;
     display: flex;
