--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,5 +1,61 @@
 .bg {
+    color: white;
+    justify-self: center;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+.bgColor {
     background-color: #bda3a5;
+}
+
+h1 {
     text-align: center;
     color: white;
+}
+
+h2 {
+    text-align: left;
+    color: white;
+}
+
+#earth {
+    height: 10em;
+    width: 10em;
+}
+
+hr {
+    border-top: 5px solid #b87b7d;
+}
+
+.bio {
+    color: white;
+    justify-self: center;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: space-evenly;
+    align-content: center;
+    margin-left: 5em;
+    margin-right: 5em;
+}
+
+.biopic {
+    height: 18em;
+    width: 12.3em;
+    padding: 1px;
+    border: 2px dotted #00387b;
+}
+
+.biopic:hover{
+    cursor: pointer;
+}
+
+.text {
+    margin-left: 6em;
+    margin-right: 6em;
+    text-align: left;
 }
