--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,19 +1,73 @@
-<div class="bg">
+<div class="bgColor">
     <br>
     <br>
-    <div>
+    <hr />
+<div>
     <h1>Mission Statement</h1>
-    <p>We firmly believe that everyone is an artist. Digital Renaissance was born to connect artists of all types. 
-    From the watercolor painter to the jazz musician, Digital Renaissance is the hub that makes it easier for artists
-     to share their talents with the world. Forming connections and drawing inspiration from those around you is as easy 
-     as creating an artist profile and reaching out to those with similar passions. 
-    Our target audience includes talented artists with musical, illustrative, or coding backgrounds.
-     It also includes those who support the arts and desire to hire their talents. This platform aims 
-     to cultivate a lively online community where art is always in the midst of being created or shared. 
-     Digital Renaissance streamlines the exchange of art that makes our world wonderfully enriching.
+</div>
+
+<div class="bg">
+    <div>
+        <img id="earth" src="../../assets/chartUpColor.png">
+    </div>
+    <div>
+    <p>We firmly believe that everyone is an artist. Digital Renaissance was born to connect artists of all types.</p>
+    <p>
+        Our target audience is primarily for illustrators, however artists of all kinds are welcome!
+        Art has never been easier to share or collect.
     </p>
     </div>
     <div>
-    
+    <img id="earth" src="../../assets/earth.png">
     </div>
+    <div>
+        <br>
+    </div>
+</div>
+<hr/>
+<br>
+<div class="bio">
+<div>
+    <img class="biopic" src="">
+</div>
+<div class="text">
+    <p>Place Holder Text Place Holder Text Place Holder Text Place Holder Text Place Holder 
+        Text Place Holder Text Place Holder Text</p>
+    <hr>
+</div>
+</div>
+<br>
+<div class="bio">
+<div>
+    <img class="biopic" src="">
+</div>
+<div class="text">
+    <p>Place Holder Text Place Holder Text Place Holder Text Place Holder Text Place Holder 
+        Text Place Holder Text Place Holder Text</p>
+    <hr>
+</div>
+</div>
+<br>
+<div class="bio">
+<div>
+    <img class="biopic" src="">
+</div>
+<div class="text">
+    <p>Place Holder Text Place Holder Text Place Holder Text Place Holder Text Place Holder 
+        Text Place Holder Text Place Holder Text</p>
+    <hr>
+</div>
+</div>
+<br>
+<div class="bio">
+<div>
+    <img class="biopic" src="../../assets/Connorwolfford.jpg">
+</div>
+<div class="text">
+    <p>I like to create things that are unlike any other. For that you can thank my father and my mother. 
+        Thanks to Jesse, Devon, and Cory this project was never boring. Now look what we created, 
+        hard to believe we made it! </p>
+    <hr>
+</div>
+</div>
 </div>
