created admin component, got artists info

--- a/src/app/get-artists/get-artists.component.html
+++ b/src/app/get-artists/get-artists.component.html
@@ -1,3 +1,7 @@
 <div class="bg">
-    
+    <div *ngFor='let artist of artists'>
+        <h1>Name: {{artist.firstName}} {{artist.lastName}}</h1>
+        <p>Email: {{artist.email}}</p>
+        <p>Role: {{artist.role}}</p>
+    </div>
 </div>
