--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -8,6 +8,7 @@
                 <li><button mat-button routerLink='/about' class='authButton'>About</button></li>
                 <li><button mat-button routerLink='/artists' class='authButton'>Artists</button></li>
                 <button mat-button routerLink='/auth' class='authButton'>Login/Signup</button>
+                <button mat-button routerLink='/admin' class='authButton'>Admin</button>
 
             </ul>
         </nav>
