implemented auth0 for authentication

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,10 @@ a {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// partials
+@import './assets/css/partials/layout.vars.scss';
+@import './assets/css/partials/responsive.partial.scss';
+
+// global styles
+@import './assets/css/base.scss';
