--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -7,7 +7,18 @@
                 <li><a routerLink='/'>Home</a></li>
                 <li><a routerLink='/about'>About</a></li>
                 <li><a routerLink='/artists'>Artists</a></li>
-                <button mat-button routerLink='/auth' class='authButton'>Login/Signup</button>
+                <!-- <button mat-button routerLink='/auth' class='authButton'>Login/Signup</button> -->
+                <div class="header-page-authStatus">
+                        <span *ngIf="auth.loggingIn">Logging in...</span>
+                        <ng-template [ngIf]="!auth.loggingIn">
+                          <a *ngIf="!auth.loggedIn" (click)="auth.login()">Log In</a>
+                          <span *ngIf="auth.loggedIn && auth.userProfile">
+                            {{ auth.userProfile.name }}
+                            <span class="divider">|</span>
+                            <a (click)="auth.logout()">Log Out</a>
+                          </span>
+                        </ng-template>
+                      </div>
 
             </ul>
         </nav>
