--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -8,7 +8,7 @@
 <div class="pics">
     <img class="artFind" routerLink="/get-artists">
     <!-- Make the same picture but cut in half -->
-    <img class="artShare">
+    <img class="artShare" routerLink="/create-skill">
 </div>
 <div class="pics">
     <h2>Find Art</h2>
