styled nav and home page

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,10 @@
 footer {
     background: #b87b7d;
     padding: 0;
-    margin-top:-2em;
+    /* margin-top:-2em; */
     height: 2em;
     color: white;
+    position: fixed;
 
 }
 
