--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -1,1 +1,2 @@
-<p>artist works!</p>
+{{artist.firstName}}
+<button mat-button [routerLink] = "['/artist', artist.id]"> Delete Artist Account</button>
