--- a/src/app/get-artists/get-artists.component.html
+++ b/src/app/get-artists/get-artists.component.html
@@ -3,5 +3,8 @@
         <h1>Name: {{artist.firstName}} {{artist.lastName}}</h1>
         <p>Email: {{artist.email}}</p>
         <p>Role: {{artist.role}}</p>
+        <p>{{artist.id}}</p>
+        <button mat-button [routerLink] = "['/artist', artist.id]" class='authButton'>See more about</button>
+
     </div>
 </div>
