--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -11,7 +11,7 @@
     <img class="artShare">
 </div>
 <div class="pics">
-    <h2>Find Art</h2>
+    <button class="findSkillsButton" routerLink="/get-skills">Find Art</button>
     <h4></h4>
     <br>
     <h2>Share Art</h2>
