--- a/src/app/get-skills/get-skills.component.html
+++ b/src/app/get-skills/get-skills.component.html
@@ -1,9 +1,15 @@
-<div class="bg">
-        <div *ngFor='let skill of skills'>
-            <h1>Title: {{skill.title}}</h1>
-            <p>Description: {{artist.description}}</p>
-            <p>Image: {{artist.image}}</p>
-            <p>Price: {{artist.price}}</p>
-            <p>skillType: {{artist.skillType}}</p>
+<div class="bannerHeading">Find the Right Artist for You!</div>
+    <div class="banner">
+            <!-- <div class="bannerText" *ngFor='let artist of artists'>
+                <h1>{{artist.firstName}} {{artist.lastName}}</h1> -->
+        <div class="bannerText" *ngFor='let skill of skills'>
+            <h1>{{skill.artist.firstName}}</h1>
+            <div class="bannerItems">
+                <p> {{skill.title}}</p>
+                <p>skillType: {{skill.skillType}}</p>
+                <p>Image: {{skill.image}}</p>
+                <p>Price: ${{skill.price}}</p>
+                <p>Description: {{skill.description}}</p>
+            </div>
         </div>
     </div>
