--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,5 +1,9 @@
-<div class="bg">
+<div class="container bg">
     <h1>Welcome Admin</h1>
-<app-get-artists></app-get-artists>
+    
 </div>
+    
+<app-get-artists ></app-get-artists>
+
+
 <br>
