Sign up feature

--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -1,3 +1,8 @@
+
+
+<!-- <button mat-button (click)="onUpdateArtist(artist.id)"> Update Artist Account</button> -->
+<button mat-button (click)="onDeleteArtist(artist.id)"> Delete Artist Account</button>
+
 {{artist.firstName}}
 {{artist.id}}
-<button mat-button (click)="deleteArtist(artist.id)"> Delete Artist Account</button>
+<!-- Show all Skills below -->
