--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -3,6 +3,7 @@
 <a routerLink="/login">Login</a> -->
 
 <div class='authPage'>
-    <app-login></app-login>
+    <!-- <app-login></app-login> -->
     <app-signup></app-signup>
 </div>
+
