--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -8,11 +8,13 @@
                 <li><button mat-button routerLink='/about' class='authButton'>About</button></li>
                 <li><button mat-button routerLink='/artists' class='authButton'>Artists</button></li>
                 <button mat-button routerLink='/admin' class='adminButton'>Admin</button>
+                <!-- Temp signin function -->
+                <button mat-button routerLink='/auth' class='authButton'>SignIn/Signup</button>
                 
             </ul>
-           
+         
         </nav>
-        <div class="header-page-authStatus">
+        <!-- <div class="header-page-authStatus">
                 <span *ngIf="auth.loggingIn">Logging in...</span>
                 <ng-template [ngIf]="!auth.loggingIn">
                   <button mat-button *ngIf="!auth.loggedIn" class='authButton' (click)="auth.login()">Login/Register</button>
@@ -24,7 +26,8 @@
                 </ng-template>
               </div>
         <div class='auth'>
-        </div>
+        </div> -->
+      
     </div>
 
 </header>
