--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,19 +1,31 @@
-<div class='signupForm'>
-        <mat-form-field (ngSubmit)="onSubmit()">
-            <h2>Sign Up</h2>
-            <div class="form-group">
-                <label for="firstName">First Name</label>
-                <input type="text" formControlName="firstName" class="form-control" />
-                <label for="lastName">Last Name</label>
-                <input type="text" formControlName="lastName" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label for="email">E-Mail</label>
-                <input type="text" formControlName="email" class="form-control" />
-                <label for="password">Password</label>
-                <input type="password" min="8" formControlName="password" class="form-control" />
-            </div>
-            <button mat-button class='login'>Login</button>
-            <!-- <button mat-button (click)="onNoClick()" class='cancel'>Cancel</button> -->
-        </mat-form-field>
-</div>
+<mat-card>
+        <form (submit)="onSignUp(signUpForm)" #signUpForm="ngForm">
+          <mat-form-field>
+            <input
+              matInput
+              type="text"
+              name="firstName"
+              ngModel
+              required
+              minlength="3"
+              placeholder="First Name"
+              #firstName="ngModel">
+            <mat-error *ngIf="firstName.invalid">Please enter a  first name.</mat-error>
+          </mat-form-field>
+          <mat-form-field>
+            <textarea
+              matInput
+              rows="4"
+              name="lastName"
+              ngModel
+              required
+              placeholder="Last Name"
+              #lastName="ngModel"></textarea>
+            <mat-error *ngIf="lastName.invalid">Please enter a post title.</mat-error>
+          </mat-form-field>
+          <button
+            mat-raised-button
+            color="accent"
+            type="submit">Save Post</button>
+        </form>
+      </mat-card>
