--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,31 +1,60 @@
 <mat-card>
         <form (submit)="onSignUp(signUpForm)" #signUpForm="ngForm">
-          <mat-form-field>
-            <input
-              matInput
-              type="text"
-              name="firstName"
-              ngModel
-              required
-              minlength="3"
-              placeholder="First Name"
-              #firstName="ngModel">
-            <mat-error *ngIf="firstName.invalid">Please enter a  first name.</mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <textarea
-              matInput
-              rows="4"
-              name="lastName"
-              ngModel
-              required
-              placeholder="Last Name"
-              #lastName="ngModel"></textarea>
-            <mat-error *ngIf="lastName.invalid">Please enter a post title.</mat-error>
-          </mat-form-field>
+            <div>
+                <mat-form-field>
+                    <input
+                        matInput
+                        type="text"
+                        name="firstName"
+                        ngModel
+                        required
+                        minlength="3"
+                        placeholder="First Name"
+                        #firstName="ngModel">
+                    <mat-error *ngIf="firstName.invalid">Please enter a first name.</mat-error>
+                </mat-form-field>
+            </div>
+         <div>
+            <mat-form-field>
+                <input
+                    matInput
+                    rows="4"
+                    name="lastName"
+                    ngModel
+                    required
+                    placeholder="Last Name"
+                    #lastName="ngModel">
+                <mat-error *ngIf="lastName.invalid">Please enter a last name.</mat-error>
+            </mat-form-field>
+         </div>
+         
+         <div>
+            <mat-form-field>
+                <input
+                    matInput
+                    rows="4"
+                    name="password"
+                    ngModel
+                    required
+                    placeholder="Password"
+                    #password="ngModel">
+                <mat-error *ngIf="password.invalid">Please enter a password.</mat-error>
+            </mat-form-field>
+         </div>
+              <mat-form-field>
+                    <input
+                      matInput
+                      rows="4"
+                      name="email"
+                      ngModel
+                      required
+                      placeholder="Email"
+                      #email="ngModel">
+                    <mat-error *ngIf="email.invalid">Please enter an email.</mat-error>
+                </mat-form-field>
           <button
             mat-raised-button
             color="accent"
-            type="submit">Save Post</button>
+            type="submit">SIGNUP</button>
         </form>
       </mat-card>
