--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -7,7 +7,7 @@ header {
 
 section {
     height: 100%;
-    background-image: url('../../assets/paint-phone-glasses.jpg');//
+    background-image: url('../../assets/paint-phone-glasses.jpg');//Photo by Andrik Langfield on Unsplash
     background-size: 120%;
     background-position: top;
     background-blend-mode: color;
