--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class='loginForm'>
+<!-- <div class='loginForm'>
    <div>
        <form  #loginInForm="ngForm">
             <mat-form-field >
@@ -11,9 +11,14 @@
                     <label for="password">Password</label>
                     <input type="password" min="8" formControlName="password" class="form-control" />
                     <button mat-button class='login'>Login</button>
-                    <!-- <button mat-button (click)="onNoClick()" class='cancel'>Cancel</button> -->
-                </mat-form-field>
+                    <button mat-button (click)="onNoClick()" class='cancel'>Cancel</button> -->
+                <!-- </mat-form-field>
        </form>
         
+            <label for="password">Password</label>
+            <input type="password" min="8" formControlName="password" class="form-control" />
+            <button mat-button class='login'>Login</button>
+             <button mat-button (click)="onNoClick()" class='cancel'>Cancel</button>  -->
+        <!-- </mat-form-field>
     </div>
-</div>
+</div> -->
