--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -14,7 +14,7 @@
     <button class="findSkillsButton" routerLink="/get-skills">Find Art</button>
     <h4></h4>
     <br>
-    <h2>Share Art</h2>
+    <button class="createSkillsButton" routerLink="/create-skill">Share Art</button>
 </div>
 <br/>
 <br/>
