--- a/src/app/create-skill/create-skill.component.html
+++ b/src/app/create-skill/create-skill.component.html
@@ -1,22 +1,48 @@
 <div class="bg">
-<br>
-<br>
-<h1>Create Skill Profile</h1>
-<div class="formDiv">
-    <img class="addSkill">
-</div>
-<div class="formDiv">
-    <mat-form-field (ngSubmit)="onSubmit()">
-        <label for="skillTitle">Skill Title:</label>
-        <input type="text" formControlName="skillTitle" class="form-control" />
-        <label for="skillDescription">Skill Description:</label>
-        <input type="text" formControlName="skillDescription" class="form-control" />
-        <label for="skillPrice">Skill Price:</label>
-        <input type="text" formControlName="skillPrice" class="form-control" />
-    </mat-form-field>
-</div>
-<div class="formDiv">
-    <button mat-button class='submit'>Submit</button>
-</div>
-<br>
+        <h1>Create Skill Profile</h1>
+        <form #skillForm="ngForm" (ngSubmit)="onSubmit()" novalidate class="formDiv">
+
+            {{ skillForm.form.valid}}
+
+            <pre>{{ skillForm.value | json}}</pre>
+            <hr />
+            {{skillModel | json}}
+
+        <div class="form-group">
+            <select (blur)="validateskillType(skillType.value)" (change)="validateskillType(skillType.value)" class="custom-select" 
+            [(ngModel)]="skillModel.skillType" name="skillType" #skillType="ngModel" [class.is-invalid]="skillType.hasError && skillType.touched">
+                <option value='default'>Artist Category</option>
+                <option *ngFor="let typeOfArtist of typeOfArtists">{{typeOfArtist}}</option>
+            </select>
+            <small class="text-danger" [class.d-none]="!skillTypeHasError || skillType.untouched">Please choose your artist category.</small>
+        </div>
+        <div class="form-group">
+                <label for="title">Title</label>
+                    <input required 
+                    [(ngModel)]="skillModel.title" name="title" #title= "ngModel" type="text" class="form-control">
+
+                    <div class="alert alert-danger" *ngIf="title.touched &&!title.valid"> Title is required.</div>
+        </div>
+
+        <div class="form-group">
+                <label for="image">Work Examples</label>
+                    <input  
+                    [(ngModel)]="skillModel.image" name="image" #image= "ngModel" type="text" class="form-control">
+        </div>
+
+        <div class="form-group">
+                <label for="description">Description</label>
+                    <textarea [(ngModel)]="skillModel.description" name="description" #description= "ngModel" id="description" cols="30" rows="10" class="form-control"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="price">Price</label>
+                <input required 
+                [(ngModel)]="skillModel.price" name="price" 
+                #price= "ngModel"
+                id="price" class="form-control"> 
+
+                <div class="alert alert-danger" *ngIf="price.touched &&!price.valid"> Price is required.</div>
+        </div>
+            <button [disabled]="skillForm.form.invalid || skillTypeHasError" class="submit" type="submit">Submit</button> 
+</form>
 </div>
