--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -8,13 +8,12 @@
                 <li><button mat-button routerLink='/about' class='authButton'>About</button></li>
                 <li><button mat-button routerLink='/artists' class='authButton'>Artists</button></li>
                 <button mat-button routerLink='/admin' class='adminButton'>Admin</button>
-                <!-- Temp signin function -->
-                <button mat-button routerLink='/auth' class='authButton'>SignIn/Signup</button>
+                <button mat-button routerLink='/auth' class='authButton'>Auth</button>
                 
             </ul>
          
         </nav>
-        <!-- <div class="header-page-authStatus">
+         <!-- <div class="header-page-authStatus">
                 <span *ngIf="auth.loggingIn">Logging in...</span>
                 <ng-template [ngIf]="!auth.loggingIn">
                   <button mat-button *ngIf="!auth.loggedIn" class='authButton' (click)="auth.login()">Login/Register</button>
@@ -27,8 +26,7 @@
               </div>
         <div class='auth'>
         </div> -->
-      
-    </div>
+     </div> 
 
 </header>
 
