--- a/src/app/one-skill/one-skill.component.html
+++ b/src/app/one-skill/one-skill.component.html
@@ -1,17 +1,19 @@
-<mat-card class="oneSkill">
+
+ <mat-card class="oneSkill">
+
     <mat-card-header>
         <div mat-card-avatar></div>
-                <mat-card-title>{{skill.artist.firstName}}</mat-card-title>
-                <mat-card-subtitle>{{skill.description}}</mat-card-subtitle>
+                <mat-card-title>{{oneSkill.artist.firstName}}</mat-card-title>
+                <mat-card-subtitle>{{oneSkill.description}}</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image src="./assets/" alt="Photo of Artist Work">
         <mat-card-content>
-          <p>{{skill.description}}</p>
+          <p>{{oneSkill.description}}</p>
         </mat-card-content>
         <mat-card-actions>
           <button mat-button>Confirm</button>
         </mat-card-actions>
-    </mat-card>
+    </mat-card> 
 
 <!--need to make an includes in /skill/:id to make this work for their name as well-->
 
