--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,31 +1,42 @@
-<mat-card>
-        <form (submit)="onSignUp(signUpForm)" #signUpForm="ngForm">
-          <mat-form-field>
-            <input
-              matInput
-              type="text"
-              name="firstName"
-              ngModel
-              required
-              minlength="3"
-              placeholder="First Name"
-              #firstName="ngModel">
-            <mat-error *ngIf="firstName.invalid">Please enter a  first name.</mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <textarea
-              matInput
-              rows="4"
-              name="lastName"
-              ngModel
-              required
-              placeholder="Last Name"
-              #lastName="ngModel"></textarea>
-            <mat-error *ngIf="lastName.invalid">Please enter a post title.</mat-error>
-          </mat-form-field>
-          <button
-            mat-raised-button
-            color="accent"
-            type="submit">Save Post</button>
-        </form>
-      </mat-card>
+ <div class='signupForm'>
+        <h1>Register</h1>
+        <form #signUpForm="ngForm" (ngSubmit)="onSubmit(signUpForm.value)" novalidate class="register">
+            <!-- <mat-form-field> -->
+                <div class="form-group">
+                    <label for="firstName">First Name</label>
+                    <input type="text" class="form-control" 
+                    name="firstName" 
+                    />
+                </div>
+
+            <div class="form-group">
+                <label for="lastName">Last Name</label>
+                <input type="text"  
+                class="form-control" 
+                name="lastName" 
+                />
+            </div>
+
+            <div class="form-group">
+                <label for="email">E-Mail</label>
+                <input type="email"
+                class="form-control" 
+                name="email" 
+               />
+            </div>    
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input 
+                type="password" 
+                min="8" 
+                class="form-control" 
+                name="password" 
+                 />
+            </div>
+
+            <button [disabled]="signUpForm.form.invalid"  class='register' type="submit">Login</button>
+            <button mat-button (click)="onNoClick()" class='cancel'>Cancel</button> 
+        <!-- </mat-form-field> -->
+         </form>
+</div>  
