--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,10 @@ a {
     grid-template-columns: 30% auto;
 }
 
+.form-control.ng-touched.ng-invalid{
+    border: 2px solid yellow;
+}
+
 /* section {
     width: 80%;
     margin: 0 auto;
