--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,6 +1,7 @@
 /* Bordered form */
 mat-form-field {
   text-align: center;
+  
 
 }
   
@@ -11,7 +12,7 @@ mat-form-field {
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     box-sizing: border-box;
   }
   
