--- a/src/app/one-skill/one-skill.component.html
+++ b/src/app/one-skill/one-skill.component.html
@@ -1,13 +1,19 @@
 <mat-card class="oneSkill">
-    <mat-card-header>
+    <mat-card-header class='card-header'>
         <div mat-card-avatar></div>
-                <mat-card-title>{{skill.artist.firstName}}</mat-card-title>
-                <mat-card-subtitle>{{skill.description}}</mat-card-subtitle>
+                <mat-card-title>{{oneSkill.artist.firstName}}</mat-card-title>
+                <mat-card-subtitle>{{oneSkill.title}}</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image src="./assets/" alt="Photo of Artist Work">
         <mat-card-content>
-          <p>{{skill.description}}</p>
+            <h2>{{oneSkill.skillType}}</h2>
+          </mat-card-content>
+        <mat-card-content>
+          <p>{{oneSkill.description}}</p>
         </mat-card-content>
+        <mat-card-content>
+            <h3>{{oneSkill.price}}</h3>
+          </mat-card-content>
         <mat-card-actions>
           <button mat-button>Confirm</button>
         </mat-card-actions>
