--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,10 @@
-<div className='footer'>
-    <footer>
+<div class='footer'>
+    <div class='footerContent'>
         <ul>
             <li><a routerLink='/'>Home</a></li>
             <li><a routerLink='/about'>About</a></li>
             <li><a routerLink='/artists'>Artists</a></li>
-
+            <li><a routerLink='/home'>&copy; Digital Renaissance 2019</a></li>
         </ul>
-        <p>&copy; Digital Renaissance 2019</p>
-
-     
-    </footer>
+    </div>
 </div>
