--- a/src/app/one-skill/one-skill.component.html
+++ b/src/app/one-skill/one-skill.component.html
@@ -1,3 +1,4 @@
+<div class='skillCard'>
 <mat-card class="oneSkill">
     <mat-card-header class='card-header'>
         <div mat-card-avatar></div>
@@ -18,6 +19,7 @@
           <button mat-button>Confirm</button>
         </mat-card-actions>
     </mat-card>
+  </div>
 
 <!--need to make an includes in /skill/:id to make this work for their name as well-->
 
