styled artist front page

--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -2,20 +2,25 @@
     <br/>
     <br/>
 <div class="pics">
-<img class="banner" src="../../assets/bannerNew.jpg">
+<div class="banner"></div>
+
+<!-- <img class="banner" src="../../assets/bannerNew.jpg"> -->
 </div>
     <br/>
+<div class='components'>
 <div class="pics">
-    <img class="artFind" routerLink="/get-artists">
+    <img class="artFind" routerLink="/get-skills">
     <!-- Make the same picture but cut in half -->
     <img class="artShare" routerLink="/create-skill">
 </div>
 <div class="pics">
-    <button class="findSkillsButton" routerLink="/get-skills">Find Art</button>
+    <h2>Find Art</h2>
     <h4></h4>
     <br>
     <h2>Share Art</h2>
 </div>
+</div>
+<!-- <br/>
 <br/>
 <br/>
 <br/>
@@ -24,6 +29,5 @@
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
+<br/> -->
 </div>
