--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -17,7 +17,7 @@ mat-form-field {
   display: flex;
   justify-content: center;
   margin-top: .5em;
-  background-color:  #b87b7d;
+  /* background-color:  #b87b7d; */
   height: 4.5em;
 
 }
@@ -27,6 +27,7 @@ mat-card {
   margin-top: 2em;
 
 }
+
   
   
   /* Full-width inputs */
