--- a/src/app/artists/artists.component.css
+++ b/src/app/artists/artists.component.css
@@ -1,9 +1,14 @@
 .artFind {
     background-image: url("../../assets/findArtNew.jpg");
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
-    height: 50vh;
-    width: 24vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 17em;
+    width: 15em;
+    padding: .5em;
+    margin: .5em;
 }
 
 .artFind:hover{
@@ -15,10 +20,15 @@
 
 .artShare {
     background-image: url("../../assets/shareArtNew.jpg");
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
-    height: 50vh;
-    width: 24vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 17em;
+    width: 15em;
+    padding: .5em;  
+    margin: .5em;
 }
 
 .artShare:hover{
@@ -29,8 +39,11 @@
 }
 
 .banner {
-    height: 20vh;
-    width: 60vw;
+    height: 8em;
+    width: 60%;
+    background-image: url("../../assets/bannerNew.jpg");
+    background-size: cover;
+    background-position: bottom left;
 }
 
 .pics {
@@ -40,10 +53,14 @@
     text-align: center;
     justify-content: space-evenly;
     align-content: center;
+    flex-wrap: wrap;
 }
 
 .bg {
-    background-color: #bda3a5;
+    background-color: #3b6283;
+    background-size: 100%;
+    height:100%;
+    
 }
 
 h2 {
