--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,10 @@
 <div class='footer'>
-    <div class='footerContent'>
+    <mat-toolbar class='footerContent'>
         <ul>
             <li><a routerLink='/'>Home</a></li>
-            <li><a routerLink='/about'>About</a></li>
+            <!-- <li><a routerLink='/about'>About</a></li> -->
             <li><a routerLink='/artists'>Artists</a></li>
-            <li><a routerLink='/home'>&copy; Digital Renaissance 2019</a></li>
+            <li><a routerLink='/'>&copy; Digital Renaissance 2019</a></li>
         </ul>
-    </div>
+    </mat-toolbar>
 </div>
