--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -8,12 +8,11 @@ header {
 section {
     height: 100%;
     background-image: url('../../assets/paint-phone-glasses.jpg');//Photo by Andrik Langfield on Unsplash
-    background-size: 120%;
     background-position: top;
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
-    padding:0;
+    padding:3em;
     background-color: #b87b7d;
 }
 
@@ -25,26 +24,34 @@ section {
 
 nav {
     justify-self: left;
+    margin-left: -7em;
     margin-top: 1em;
     height: 5px;
-    margin: 1em;
+    font-weight: bold;
+
+
+    // margin: 1em;
 }
 
 ul {
     list-style-type: none;
     margin: 0; padding: 0;
+    
 }
 
 li {
     float: left;
     margin-top: .2em;
     margin-right: 1em;
+    
 }
 
 a {
     padding: 1.5em;
     text-transform: uppercase;
     font-size: .8em;
+    font-weight: bold;
+
     color: white;
 
 }
@@ -53,6 +60,7 @@ li:hover {
     background: #204a82;
     border-radius: 10em;
 }
+
 
 .authButton {
     /* margin-left: 90%; */
