Add feedback component, service

--- a/src/app/one-skill/one-skill.component.html
+++ b/src/app/one-skill/one-skill.component.html
@@ -21,6 +21,7 @@
         </mat-card-actions>
     </mat-card>
   </div>
+  <app-feedback></app-feedback>
 
 <!--need to make an includes in /skill/:id to make this work for their name as well-->
 
