--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -5,7 +5,7 @@
         <nav class='nav' id='nav'>
 
             <ul>
-                <li><button mat-button routerLink='/' class='authButton'>Home</button></li>
+                <li><button mat-button routerLink='/home' class='authButton'>Home</button></li>
                 <!-- <li><button mat-button routerLink='/about' class='authButton'>About</button></li> -->
                 <li><button mat-button routerLink='/artists' class='authButton'>Artists</button></li>
                 <button mat-button routerLink='/admin' class='adminButton'>Admin</button>
@@ -26,9 +26,6 @@
                   </span>
                 </ng-template> -->
               </div>
-        <div class='auth'>
-
-        </div>
       
     </div>
 
