--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -7,12 +7,13 @@ mat-toolbar {
     /* position: sticky; */
     /* margin-top: -2em; */
     /* position: fixed; */
-
 }
 
 ul {
     list-style-type: none;
     margin: 0; padding: 0;
+    margin-top: -.5em;
+
    
     
 }
@@ -27,7 +28,7 @@ li {
 a {
     padding: 1.5em;
     text-transform: uppercase;
-    font-size: .8em;
+    font-size: .6em;
     color: white;
 }
 
