--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -8,13 +8,21 @@
                 <li><button mat-button routerLink='/' class='authButton'>Home</button></li>
                 <!-- <li><button mat-button routerLink='/about' class='authButton'>About</button></li> -->
                 <li><button mat-button routerLink='/artists' class='authButton'>Artists</button></li>
+                <li>
                 <button mat-button routerLink='/admin' class='adminButton'>Admin</button>
+              </li>
 
             </ul>
     
         </nav>
         <div class="header-page-authStatus">
+            <li *ngIf="artistIsAuthenticated">
+                <button mat-button class= 'authButton'>Logout</button>
+            </li>
+            <li *ngIf="!artistIsAuthenticated">
                 <button mat-button routerLink='/login' class='authButton'>Register/Login</button> 
+            </li>
+               
 
                 <!-- <span *ngIf="auth.loggingIn">Logging in...</span>
                 <ng-template [ngIf]="!auth.loggingIn">
@@ -26,8 +34,9 @@
                   </span>
                 </ng-template> -->
               </div>
+          
         <div class='auth'>
-
+           
         </div>
       
     </div>
