--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -43,6 +43,7 @@ li {
     float: left;
     margin-top: .2em;
     margin-right: 1em;
+    list-style-type: none;
     
 }
 
@@ -72,7 +73,7 @@ li:hover {
 
 .adminButton {
   font-family: 'Montserrat';
-  // margin-top: -3em;
+  margin-top: -1em;
   border-radius: 10em;
   font-size: 12px;
 }
