--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -32,8 +32,40 @@ a {
     color: white;
 }
 
-li:hover {
-    background: #204a82;
-    border-radius: 10em;
-
+a:hover {
+    color: black;
 }
+
+li {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    overflow: hidden;
+  }
+  
+
+  li:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #204a82;
+    height: 4px;
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  li:hover:before, li:focus:before, li:active:before {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
