--- a/src/app/get-skills/get-skills.component.css
+++ b/src/app/get-skills/get-skills.component.css
@@ -1,11 +1,18 @@
+.container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 .banner{
     display:flex;
     justify-content:center;
     align-items:center;
     flex-wrap:wrap;
     margin:0;
-    height:200px;
-
 }
 
 .bannerHeading{
@@ -25,4 +32,24 @@
 
 .bannerItems{
     padding:10px;
+}
+.cardHeader {
+    text-align: center;
+    justify-content: center;
+
+}
+.header {
+    justify-self: center;
+    text-align: center;
+}
+.card {
+    width: 15em;
+    height: fit-content;
+    padding: 1em;
+    margin: 1em;
+    text-align: center;
+}
+
+mat-card {
+    text-align: center;
 }
