--- a/src/app/get-skills/get-skills.component.html
+++ b/src/app/get-skills/get-skills.component.html
@@ -1,15 +1,26 @@
+
 <div class="bannerHeading">Find the Right Artist for You</div>
-    <div class="banner">
-        <div class="bannerText" *ngFor='let skill of skills'>
-            <h1>{{skill.artist.firstName}}</h1>
-            <div class="bannerItems">
-                <p> {{skill.title}}</p>
-                <p>skillType: {{skill.skillType}}</p>
-                <p>Image: {{skill.image}}</p>
-                <p>Price: ${{skill.price}}</p>
-                <p>Description: {{skill.description}}</p>
-                <!-- <p>Rating: {{skill.rating}}</p> -->
-                <button class= mat-button [routerLink] = "['/skill', skill.id]">Book Me.</button>
-            </div>
+
+<div class='container'>
+<mat-card class="card" *ngFor='let skill of skills'>
+        <mat-card-header class='header'>
+          <div mat-card-avatar class="header-image"></div>
+          <div class='cardHeader'>
+          <mat-card-title>{{skill.title}}</mat-card-title>
+          <mat-card-subtitle>{{skill.artist.firstName}} {{skill.artist.lastName}}</mat-card-subtitle>
         </div>
-    </div>
+        </mat-card-header>
+        <img mat-card-image alt="profile picture">
+        <mat-card-content>
+        <h3>{{skill.skillType}}</h3>
+        <h2>Description:</h2>
+          <p>
+                {{skill.description}}
+          </p>
+          <p>Price: ${{skill.price}}</p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button [routerLink] = "['/skill', skill.id]">View Skill</button>
+        </mat-card-actions>
+      </mat-card>
+</div>
