--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -8,13 +8,13 @@
                 <li><button mat-button routerLink='/home' class='authButton'>Home</button></li>
                 <!-- <li><button mat-button routerLink='/about' class='authButton'>About</button></li> -->
                 <li><button mat-button routerLink='/artists' class='authButton'>Artists</button></li>
-                <button mat-button routerLink='/admin' class='adminButton'>Admin</button>
+                <li><button mat-button routerLink='/admin' class='authButton'>Admin</button></li>
 
             </ul>
     
         </nav>
         <div class="header-page-authStatus">
-                <button mat-button routerLink='/login' class='authButton'>Register/Login</button> 
+                <button mat-button routerLink='/login' class='regButton'>Register/Login</button> 
 
                 <!-- <span *ngIf="auth.loggingIn">Logging in...</span>
                 <ng-template [ngIf]="!auth.loggingIn">
