--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -3,6 +3,7 @@
 
 header {
     background: #b87b7d;
+    
 }
 
 section {
@@ -25,10 +26,9 @@ section {
 nav {
     justify-self: left;
     margin-left: -7em;
-    margin-top: 1em;
+    margin-top: 1.5em;
     height: 5px;
     font-weight: bold;
-
 
     // margin: 1em;
 }
@@ -41,7 +41,7 @@ ul {
 
 li {
     float: left;
-    margin-top: .2em;
+    // margin-top: .2em;
     margin-right: 1em;
     
 }
@@ -56,9 +56,36 @@ a {
 
 }
 
-li:hover {
-    background: #204a82;
-    border-radius: 10em;
+li {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+li:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #204a82;
+  height: 4px;
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+li:hover:before, li:focus:before, li:active:before {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
 }
 
 
@@ -66,21 +93,59 @@ li:hover {
     /* margin-left: 90%; */
     font-family: 'Montserrat';
     margin-top: -1em;
-    border-radius: 10em;
+    // border-radius: 10em;
     font-size: 12px;
+}
+.regButton {
+  /* margin-left: 90%; */
+  font-family: 'Montserrat';
+  margin-top: -.2em;
+  // border-radius: 10em;
+  font-size: 12px;
 }
 
 .adminButton {
   font-family: 'Montserrat';
-  // margin-top: -3em;
-  border-radius: 10em;
+  // margin-top: -.55em;
+  // border-radius: 10em;
   font-size: 12px;
 }
 
-
 button:hover {
-    background: #204a82;
-    color: white;
+  color:white;
+
+}
+
+button {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+button:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #204a82;
+  height: 4px;
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+button:hover:before, button:focus:before, button:active:before {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
 }
 
 
