--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
                 <mat-form-field>
                     <input
                         matInput
-                        type="text"
+                        type="email"
                         name="email"
                         ngModel
                         required
@@ -20,7 +20,7 @@
                 <mat-form-field>
                     <input
                         matInput
-                        type="text"
+                        type="password"
                         name="password"
                         ngModel
                         required
