--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -45,8 +45,8 @@ mat-card {
   }
   /* Set a style for all buttons */
   button {
-    background-color: #193153;
-    color: white;
+    /* background-color: #193153; */
+    color: black;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -61,6 +61,8 @@ mat-card {
   /* Add a hover effect for buttons */
   button:hover {
     opacity: 0.8;
+    background-color:#193153;
+    color: white;
   }
 
   h2 {
