styled create skill

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -6,16 +6,20 @@ header {
     
 }
 
+.mainContainer {
+  size:100%; 
+}
+
 section {
     height: 100%;
-    width:100%;
+    // width:100%;
+    size: 100%;
     background-image: url('../../assets/paint-phone-glasses.jpg');//Photo by Andrik Langfield on Unsplash
     background-position: top;
     background-attachment: fixed;
     background-size: cover;
-    background-repeat: no-repeat center center fixed;
+    background-repeat: no-repeat;
     padding:3em;
-    overflow:hidden;
     background-color: #b87b7d;
 }
 
