--- a/src/app/create-skill/create-skill.component.css
+++ b/src/app/create-skill/create-skill.component.css
@@ -2,6 +2,16 @@ body {
     color: white;
 }
 
+.createSkill {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+mat-card {
+   text-align: center;
+    width: 50%;
+}
 .bg {
     background-color: #bda3a5;
 }
@@ -12,8 +22,8 @@ h1 {
 }
 
 .formDiv {
-    margin-left: 10em;
-    margin-right: 10em;
+    /* margin-left: 10em;
+    margin-right: 10em; */
     justify-self: center;
     display: flex;
     flex-direction: column;
@@ -22,26 +32,27 @@ h1 {
     /* border: 2px 2px 2px 2px solid #00387b; */
 }
 
-.addSkill {
+/* .addSkill {
     height: 15em;
     width: 48em;
     background-color: #b87b7d;
     border: 2px 2px 2px 2px solid #00387b;
-}
+} */
 
 input{
     width: 35em;
-    padding: 12px 20px;
-    margin-right: 3em;
+    padding: 2.5em;
+    text-align: center;
+    /* margin-right: 3em;
     margin-left: 3em;
-    margin-top: 3em;
+    margin-top: 3em; */
     display: inline-block;
-    border: 1px solid #00387b;
+    /* border: 1px solid #00387b;
     box-sizing: border-box;
-    background-color: #b87b7d;
+    background-color: #b87b7d; */
 }
 
-#description{
+/* #description{
     width: 35em;
     padding: 10px;
     margin-right: 3em;
@@ -66,4 +77,4 @@ input{
     margin:auto;
     margin-top:1em;
     
-}
+} */
