--- a/src/app/create-skill/create-skill.component.html
+++ b/src/app/create-skill/create-skill.component.html
@@ -1,3 +1,4 @@
+<div class='createSkill'>
 <mat-card>
     <form (submit)="onSubmit(skillForm)"
             #skillForm="ngForm" novalidate>
@@ -70,6 +71,7 @@
     type="submit">Create Skill Profile</button>
     </form>
 </mat-card>
+</div>
         
         <!-- <form #skillForm="ngForm" (ngSubmit)="onSubmit()" novalidate class="formDiv">
 
