--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,66 +1,8 @@
-.artFind {
-    background-image: url("../../assets/findArtNew.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    height: 17em;
-    width: 15em;
-    padding: .5em;
-    margin: .5em;
-}
-
-.artFind:hover{
-    background-image: url("../../assets/findArtNewHoverHover.jpg");
-    cursor: pointer;
-    transform: scale(1.05, 1.05);
-    box-shadow: #193153 2px 2px 2px;
-}
-
-.artShare {
-    background-image: url("../../assets/shareArtNew.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    height: 17em;
-    width: 15em;
-    padding: .5em;  
-    margin: .5em;
-}
-
-.artShare:hover{
-    background-image: url("../../assets/shareArtHover.jpg");
-    cursor: pointer;
-    transform: scale(1.05, 1.05);
-    box-shadow: #193153 2px 2px 2px;
-}
-
-.banner {
-    height: 8em;
-    width: 60%;
-    background-image: url("../../assets/bannerNew.jpg");
-    background-size: cover;
-    background-position: bottom left;
-}
-
-.pics {
-    justify-self: center;
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    justify-content: space-evenly;
-    align-content: center;
-    flex-wrap: wrap;
-}
 
 .bg {
     background-color: #3b6283;
-    background-size: 100%;
-    height:100%;
-    
+    background-size: cover;
+    min-height: 500px;
 }
 
 h2 {
