changed image to be correct

--- a/src/app/get-artists/get-artists.component.html
+++ b/src/app/get-artists/get-artists.component.html
@@ -9,7 +9,7 @@
         <mat-card *ngFor='let artist of artists'>
             <div class="profile-info">
                 <div>
-                        Add Iamge here
+                        Add Image here
                 </div>
                 <div>
                         <h3>{{artist.firstName}} {{artist.lastName}}</h3>
