--- a/src/app/get-skills/get-skills.component.css
+++ b/src/app/get-skills/get-skills.component.css
@@ -5,6 +5,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    min-height: 500px;
+
 }
 
 .banner{
@@ -20,8 +22,7 @@
     text-shadow: 2px 2px 6px #000;
     color:white;
     text-align:center;
-    padding:10px;
-    min-height: 500px;
+    padding:1.5em;
 
 }
 
