--- a/src/app/get-skills/get-skills.component.html
+++ b/src/app/get-skills/get-skills.component.html
@@ -16,11 +16,12 @@
         <h2>Description:</h2>
           <p>
                 {{skill.description}}
+                {{skill.id}}
           </p>
           <p>Price: ${{skill.price}}</p>
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button [routerLink] = "['/skill', skill.id]">View Skill</button>
+            <button mat-button routerLink ='/skill/{{skill.id}}'>View Skill</button>
         </mat-card-actions>
       </mat-card>
 </div>
